AM_CPPFLAGS = -I$(top_srcdir)/include -I$(top_srcdir)/src/libs/mt32

noinst_LIBRARIES = libmt32.a

libmt32_a_SOURCES = \
	Analog.cpp \
	BReverbModel.cpp \
	Display.cpp \
	File.cpp \
	FileStream.cpp \
	LA32FloatWaveGenerator.cpp \
	LA32Ramp.cpp \
	LA32WaveGenerator.cpp \
	MidiStreamParser.cpp \
	Part.cpp \
	Partial.cpp \
	PartialManager.cpp \
	Poly.cpp \
	ROMInfo.cpp \
	SampleRateConverter.cpp \
	Synth.cpp \
	TVA.cpp \
	TVF.cpp \
	TVP.cpp \
	Tables.cpp \
	VersionTagging.cpp \
	sha1/sha1.cpp \
	srchelper/SrchelperModel.cpp \
	srchelper/InternalResampler.cpp \
	srchelper/c_interface/c_interface.cpp
